extension/scripts/global/globalStyle.css
.hidden {
	display: none !important;
}

.tt-black-overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 100;
	background-color: #00000059;
}

.no-margin {
	margin: 0;
}

.tt-delimiter {
	overflow: hidden;
	height: 0;
	border-left: none;
	border-right: none;
	border-top: #ccc;
	border-top: 1px solid var(--sidebar-horizontal-divider-bg-color);
	border-bottom: #fff;
	border-bottom: 1px solid var(--sidebar-horizontal-divider-shadow-color);
	margin-bottom: 5px;
}

.tt-overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 100;
	background-color: #00000059;
}

.tt-overlay-item {
	position: relative;
	z-index: 999999999;
}

.relative {
	position: relative;
}

/* Replace Torn classes */

/* CHECK - Replaces m-top10 */
.mt10 {
	margin-top: 10px;
}

/* CHECK - Replaces m-bottom10 */
.mb10 {
	margin-bottom: 10px;
}

/* CHECK - Replaces t-clear */
.clr {
	color: var(--default-color, #333);
	text-decoration: none;
}

/* CHECK - Replaces c-pointer */
.cp {
	cursor: pointer;
}

/* CHECK - Replaces right */
.fr {
	float: right;
}

/* CHECK - Replaces left */
.fl {
	float: left;
}

[class*="torn-icon-"] {
	background: url("https://www.torn.com/images/v2/city/location_icons_34x34px.svg") no-repeat;
	height: 34px;
	width: 34px;
	display: inline-block;
	vertical-align: middle;
}

.torn-icon-item-market {
	background-position: -68px -34px;
}

/* General Colors */

*[color="white"] {
	color: white !important;
}

*[color="red"] {
	color: red !important;
}

*[color="tRed"] {
	color: var(--default-red-color, #d83500);
}

*[color="darkorange"] {
	color: darkorange !important;
}

*[color="green"] {
	color: green !important;
}

*[color="tGreen"] {
	color: var(--default-green-color, #678c00) !important;
}

*[background-color="green"] {
	background-color: #149a32 !important;
}

*[background-color="red"] {
	background-color: #c82333 !important;
}

/* Sidebar Areas */

.tt-sidebar-area {
	margin-top: 2px;
	overflow: hidden;
}

/*noinspection CssOverwrittenProperties*/
.tt-sidebar-area > div {
	position: relative;
	cursor: pointer;
	overflow: hidden;
	vertical-align: top;
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
	background-color: #f2f2f2;
	background-color: var(--default-bg-panel-color);
}

/*noinspection CssOverwrittenProperties*/
.tt-sidebar-area a {
	overflow: hidden;
	color: #333;
	color: var(--default-content-font-color);
	text-decoration: none;
	height: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-direction: row;
	flex-direction: row;
}

.tt-sidebar-area a span {
	float: none;
	display: inline-block;
	vertical-align: middle;
	margin-left: 10px;
}

/* Containers */

.tt-container.spacer {
	margin-bottom: 10px;
}

.tt-container .title {
	padding-left: 10px;
	height: 30px;
	line-height: 30px;
	font-size: 13px;
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.65);
	letter-spacing: 1px;
	display: flex;
	white-space: nowrap;
	margin: initial;
}

.tt-container.theme-default .title {
	color: #fff;
	background: repeating-linear-gradient(90deg, #627e0d, #627e0d 2px, #6e8820 0, #6e8820 4px);
}

.tt-container.theme-alternative .title {
	color: rgb(172, 234, 0);
	background: repeating-linear-gradient(90deg, #242424, #242424 2px, #2e2e2e 0, #2e2e2e 4px);
}

.tt-container.collapsible .title {
	cursor: pointer;
}

.tt-container.spacer .title {
	margin-top: 10px;
}

.tt-container .title .text {
	width: -webkit-fill-available;
	width: -moz-available;
}

.tt-container .title .icon {
	line-height: inherit;
	min-width: 30px;
	font-size: 16px;
	text-align: center;
	position: static !important;
	margin: auto;
}

.tt-container.rounding .title:not(.collapsed) {
	border-radius: 5px 5px 0 0;
}

.tt-container.rounding .title.collapsed {
	border-radius: 5px;
}

.tt-container .title.collapsed .icon {
	transform: rotate(-90deg);
}

.tt-container .title.collapsed + .content {
	display: none;
}

.tt-container .title .options {
	width: 100%;
	display: flex;
	flex-direction: row-reverse;
}

.tt-container.theme-default .options {
	/*color: #acea00;*/
	color: white;
}

.tt-container.theme-alternative .options {
	color: #acea00;
}

#sidebarroot .tt-container .title {
	height: 22px;
	line-height: 22px;
	border-top-right-radius: 5px;
	border-bottom-right-radius: 5px;
}

#sidebarroot .pill {
	position: relative;
	cursor: pointer;
	overflow: hidden;
	vertical-align: top;
	border-bottom-right-radius: 5px;
	border-top-right-radius: 5px;
	background-color: var(--default-bg-panel-color, #f2f2f2);
	margin-top: 2px;
}

#sidebarroot .pill a {
	overflow: hidden;
	color: var(--default-content-font-color, #333);
	text-decoration: none;
	height: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-direction: row;
	flex-direction: row;
	line-height: 22px;
	margin-left: 8px;
}

.tt-container .content {
	margin-top: initial !important;
}

.tt-container.rounding .content {
	border-radius: 0 0 5px 5px;
}

.tt-container .content.background {
	background-color: var(--default-bg-panel-color, #f2f2f2);
}

/*
 * Feature Status popup
 */

#tt-page-status {
	background-color: white;
	padding: 7px 14px;
	width: 150px;
	border-radius: 10px;
	border: 2px solid lightgray;
}

#tt-page-status.top-left {
	position: absolute;
	top: 90px;
	left: 16px;
}

#tt-page-status.top-right {
	position: absolute;
	top: 90px;
	right: 16px;
}

#tt-page-status.bottom-left {
	position: fixed;
	left: 16px;
	bottom: 16px;
}

#tt-page-status.bottom-right {
	position: fixed;
	right: 16px;
	bottom: 50px;
}

#tt-page-status.hidden,
#tt-page-status.only-fails .tt-page-status-feature:not(.failed),
#tt-page-status.hide-disabled .tt-page-status-feature.disabled,
.tt-page-status-header.collapsed + .tt-page-status-content {
	display: none;
}

.tt-page-status-header {
	border-bottom: 2px solid lightgray;
	font-weight: 600;
	margin-bottom: 5px;
	display: inline-flex;
	width: 100%;
	cursor: pointer;
}

.tt-page-status-header.collapsed {
	border-bottom: none;
	margin-bottom: 0;
}

.tt-page-status-header.collapsed i {
	transform: rotate(-90deg);
}

.tt-page-status-header span {
	width: 100%;
}

.tt-page-status-scope-heading {
	text-align: center;
	font-style: italic;
	margin-bottom: 3px;
}

.tt-page-status-feature {
	padding: 1px 0;
}

.tt-page-status-feature-icon i {
	margin-right: 3px;
}

.tt-page-status-feature.disabled i {
	color: orange;
}

.tt-page-status-feature.failed i {
	color: red;
}

.tt-page-status-feature.loaded i {
	color: green;
}

.tt-page-status-feature.information i {
	color: blue;
}

/* FIXME - Old FM */
.tt-page-status-feature-icon.disabled i {
	color: orange;
}

/* FIXME - Old FM */
.tt-page-status-feature-icon.failed i {
	color: red;
}

/* FIXME - Old FM */
.tt-page-status-feature-icon.success i {
	color: green;
}

